fix image sizes on mobile

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -40,8 +40,16 @@ a {
     padding-bottom: 1rem;
     flex-grow: 1;
 
-    img { 
-        max-width: 900px;
+    img {
+        @media (min-width: $desktopMinimum) { 
+            max-width: 900px;
+        }
+
+        @media (max-width: $desktopMinimum) { 
+            max-width: 100%;
+            width: auto;
+            height: auto;
+        }
     }
 }
 
